# TKO

./: .gitignore  .prettierrc  .zenodo.json  CITATION.cff  CNAME  README.md  astro.config.mjs  citation.bib  deno.jsonc  flake.nix  go.mod  main.ts  package-lock.json  package.json  package.json5  package.jsonc  postcss.config.mjs  pyproject.toml  server.py  tsconfig.jsonc
cmd/mcptools/: main.go
docs/: README.md
molecular-meteor/: astro.config.mjs  package.json
refs/nejmai/: README.md
refs/tko/: tko.bib
scripts/: quickstart.sh  release.py  server.ts
servers/: README.md
zapping-zenith/: package.json
