# /qompassai/tko/pyproject.toml
# Qompass AI Diver TKO Model Context Protocol (MCP) PyProject Config
# Copyright (C) 2025 Qompass AI, All rights reserved
# ########################################################

[project]
name = "mcp-tools"
version = "0.1.0"
description = "Qompass AI: Transforming Knowledge Ontology with the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["mcp[cli]"]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.lint]
ignore = ["D203"]
select = ["E", "F", "I", "UP", "A"]

[tool.ruff]
line-length = 88
target-version = "py313"

